# VACANCIES

./: db.sqlite3  manage.py  pyproject.toml
lesson27_1/: asgi.py  settings.py  urls.py  wsgi.py
vacancies/: admin.py  models.py  views.py
vacancies/migrations/: 0001_initial.py
